zakura-state/src/service/finalized_state/disk_format/tests/snapshots/column_family_names.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 77
expression: cf_names
---
[
  "balance_by_transparent_addr",
  "block_header_by_height",
  "block_info",
  "commitment_roots_by_height",
  "default",
  "hash_by_height",
  "hash_by_tx_loc",
  "header_aux_delivery_v1",
  "header_child_v1",
  "header_deferred_v1",
  "header_eligibility_root_v1",
  "header_engine_meta_v1",
  "header_finality_history_v1",
  "header_node_by_hash_v1",
  "header_root_auth_frontier",
  "header_selected_v1",
  "header_validation_context_v1",
  "header_verified_v1",
  "height_by_hash",
  "history_tree",
  "ironwood_anchors",
  "ironwood_note_commitment_subtree",
  "ironwood_note_commitment_tree",
  "ironwood_nullifiers",
  "orchard_anchors",
  "orchard_note_commitment_subtree",
  "orchard_note_commitment_tree",
  "orchard_nullifiers",
  "pruning_metadata",
  "sapling_anchors",
  "sapling_note_commitment_subtree",
  "sapling_note_commitment_tree",
  "sapling_nullifiers",
  "sprout_anchors",
  "sprout_note_commitment_tree",
  "sprout_nullifiers",
  "tip_chain_value_pool",
  "tx_by_loc",
  "tx_loc_by_hash",
  "tx_loc_by_spent_out_loc",
  "tx_loc_by_transparent_addr_loc",
  "utxo_by_out_loc",
  "utxo_loc_by_transparent_addr_loc",
  "vct_sync_metadata",
  "vct_upgrade_metadata",
  "zakura_header_body_size_by_height",
  "zakura_header_by_height",
  "zakura_header_hash_by_height",
  "zakura_header_height_by_hash",
]
