zakura-state/src/service/finalized_state/disk_format/tests/snapshots/header_root_auth_frontier_raw_data@mainnet_0.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "020000000008ce3d9731b000c08338455c8a4a6bd05da16e26b11daa1b917184ece80f04000000",
  ),
]
