zakura-state/src/service/finalized_state/disk_format/tests/snapshots/header_root_auth_frontier_raw_data@testnet_0.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "0200000000382c4a332661c7ed0671f32a34d724619f086c61873bce7c99859dd9920aa6050000",
  ),
]
