zakura-state/src/service/finalized_state/disk_format/tests/snapshots/header_root_auth_frontier_raw_data@testnet_1.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "0101000000238d665a062b9007836a7d8f968ba2f3847af5f542733389a952cf9b8679550200",
  ),
  KV(
    k: "01",
    v: "00000000382c4a332661c7ed0671f32a34d724619f086c61873bce7c99859dd9920aa605",
  ),
]
